--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -1,5 +1,5 @@
 body.menu-open {
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 body.menu-open::-webkit-scrollbar {
@@ -25,7 +25,7 @@ body.menu-open::-webkit-scrollbar {
     font-family: serif;
     list-style: none;
     padding-inline: 2rem;
-    z-index: 2;
+    z-index: 10;
 
     img {
       width: 80%;
@@ -33,7 +33,13 @@ body.menu-open::-webkit-scrollbar {
 
       
       @media screen and (max-width: 768px) {
-        display: none;
+        width: 60%;
+        max-width: 8rem;
+      }
+
+      @media screen and (max-width: 576px) {
+        width: 50%;
+        max-width: 6rem;
       }
     }
 
@@ -56,7 +62,7 @@ body.menu-open::-webkit-scrollbar {
 
       .cross-icon {
         transform: rotate(90deg);
-        margin-left: 3.8rem;
+        margin-left: -3rem;
       }
 
       @media screen and (max-width: 768px) {
@@ -70,7 +76,7 @@ body.menu-open::-webkit-scrollbar {
       display: flex;
       margin: 0;
       align-items: center;
-      gap: 1.2rem;
+      gap: 1rem;
       justify-content: space-around;
 
       @media screen and (max-width: 768px) {
@@ -96,14 +102,14 @@ body.menu-open::-webkit-scrollbar {
         font-weight: bold;
 
         &:hover {
-          background-color: #e0ab88;
+          background-color: #a36337;
           color: white;
         }
 
         @media screen and (max-width: 768px) {
-          font-size: 1rem;
-          width: 2rem;
-          height: 2rem;
+          font-size: 1.1rem;
+          width: 1.4rem;
+          height: 1.4rem;
         }
       }
 
@@ -126,8 +132,8 @@ body.menu-open::-webkit-scrollbar {
 
         .btn-badge {
           position: absolute;
-          top: -0.4rem; 
-          right: -0.8rem; 
+          top: -0.4rem;
+          right: -0.8rem;
           background-color: var(--black);
           color: var(--white);
           font-size: 1rem;
@@ -163,7 +169,7 @@ body.menu-open::-webkit-scrollbar {
         flex-grow: 1;
         justify-content: flex-end;
       }
-      
+
       .menu-icon {
         order: 1;
       }
@@ -212,6 +218,8 @@ body.menu-open::-webkit-scrollbar {
 
       .menu-icon {
         font-size: 1rem;
+        margin-left: -2rem;
+        margin-right: 12rem;
         gap: 5px;
       }
 
@@ -246,17 +254,19 @@ body.menu-open::-webkit-scrollbar {
 
       .menu-icon {
         font-size: 1rem;
+        margin-left: -2rem;
+        margin-right: 7rem;
         gap: 3px;
       }
 
       .cart-ul {
-        gap: .3rem;
+        gap: 0.3rem;
       }
 
       .first-letter {
         font-size: 0.9rem;
-        width: 1.8rem;
-        height: 1.8rem;
+        width: 1.2rem;
+        height: 1.2rem;
       }
 
       .cart-icon {
