--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -33,13 +33,16 @@ body.menu-open::-webkit-scrollbar {
 
       
       @media screen and (max-width: 768px) {
-        width: 60%;
-        max-width: 8rem;
+        width: 100%;
+        max-width: 9rem;
+        padding-left: 4rem;
+        justify-content: center;
+        align-items: center;
       }
 
       @media screen and (max-width: 576px) {
-        width: 50%;
-        max-width: 6rem;
+        padding-left: 1rem;
+        max-width: 5rem;
       }
     }
 
@@ -62,17 +65,20 @@ body.menu-open::-webkit-scrollbar {
 
       .cross-icon {
         transform: rotate(90deg);
-        margin-left: -3rem;
+        // margin-left: -3rem;
       }
 
       @media screen and (max-width: 768px) {
         margin-right: auto;
         font-size: 1rem;
         gap: 5px;
+
       }
     }
 
     .cart-ul {
+      padding: 0;
+      
       display: flex;
       margin: 0;
       align-items: center;
@@ -89,7 +95,7 @@ body.menu-open::-webkit-scrollbar {
 
       .first-letter {
         font-size: 1.3rem;
-        padding-inline: 0.7rem;
+        padding-inline: 0.3rem;
         cursor: pointer;
         color: white;
         background-color: #333;
@@ -110,6 +116,8 @@ body.menu-open::-webkit-scrollbar {
           font-size: 1.1rem;
           width: 1.4rem;
           height: 1.4rem;
+         background-color: #333;
+         color: white;
         }
       }
 
@@ -158,6 +166,7 @@ body.menu-open::-webkit-scrollbar {
             font-size: 0.8rem;
             min-width: 14px;
             height: 14px;
+      
           }
         }
       }
