--- a/frontend/src/components/resetPassword/resetPassword.scss
+++ b/frontend/src/components/resetPassword/resetPassword.scss
@@ -1,8 +1,23 @@
 .resetPassword-div {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  .Success-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+
+    p {
+      font-size: 1.8rem;
+      letter-spacing: 0.2rem;
+      word-spacing: 0.3rem;
+      padding: 0.5rem 1rem;
+      background-color: #32251d6b;
+    }
+  }
   .resetPassword-form {
     font-family: serif;
     font-style: italic;
@@ -15,6 +30,13 @@
     align-items: center;
     box-shadow: 3px 3px 15px -5px #b08568;
     border-radius: 25px;
+
+    .error-message {
+      background-color: #32251d6b;
+      color: red;
+      padding: 0.5rem 1rem;
+      margin-left: 1rem;
+    }
 
     .resetPassword-input {
       background-color: #1c1919;
