Ya appointment service (#55)
* confirmation Email is working

* responsive design of appointment

* responsive appointments

--- a/frontend/src/components/services/appointments/Appointments.scss
+++ b/frontend/src/components/services/appointments/Appointments.scss
@@ -14,6 +14,9 @@
     box-shadow: none;
     border-radius: 0;
   }
+  @media screen and (max-width: 1080px) {
+  width: 100vw;
+  }
 
   .appointment-form {
     border-right: #b08568 double 6px;
@@ -41,7 +44,9 @@
       h1 {
         font-size: 2rem;
         @media screen and (max-width: 1080px) {
-          font-size: 1.6rem;
+
+          font-size: 1.2rem;
+
         }
       }
     }
@@ -58,22 +63,45 @@
         gap: 0;
         flex-direction: column;
         h3 {
-          font-size: 1.1rem;
+          font-size: 14px;
         }
       }
+   
     }
+    @media screen and (max-width: 680px) {
+      height: 100vh;
+     h3{
+      font-size: 12px;
+     }
+    }
+
+
     @media screen and (max-width: 680px) {
   
       height: 100vh;
      
     }
+
     .calendar-container {
       width: 61%;
       // overflow: hidden;
       // font-size: 16px;
       @media screen and (max-width: 1080px) {
        width: 50%;
+
+       height: 100%;
       }
+      @media screen and (max-width: 580px) {
+        width: 80%;
+        height: 100vh;
+        h3{
+          font-size: 16px;
+        }
+        
+       }
+
+      }
+
       
       .react-calendar {
         font-size: 1.2rem;
@@ -111,7 +139,13 @@
         span{
  font-size: 20px;
  @media screen and (max-width: 1080px) {
-  
+
+  abbr{
+    font-size: 10px;
+    padding: 1px;
+  }
+
+
   font-size: 10px;
 }
         }
@@ -204,6 +238,10 @@
       border-radius: 10px;
       font-size: 1rem;
       font-family: serif;
+      @media screen and (max-width: 580px) {
+     padding: 0.5rem;
+        font-size: 12px;
+      }
     }
     #service-date {
       padding: 1rem;
