modified Header.tsx and header.scss

--- a/frontend/src/components/Menu/menu.scss
+++ b/frontend/src/components/Menu/menu.scss
@@ -17,9 +17,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-  transition: transform 0.7s ease, opacity 0.7s ease;
+  transition: transform 1s ease, opacity 0.7s ease;
   transform-origin: top;
+  overflow: hidden;
 
   ul {
     display: flex;
@@ -37,20 +37,17 @@
         position: relative;
         padding-bottom: 10px;
         &::before {
-          // Pseudo-element for the border animation
           content: "";
           position: absolute;
           bottom: 0;
-          left: 0; // Initial position at left
-          width: 0; // Initial width 0
-          height: 2px; // Border height
-
-          background-color: #b08568; // Border color
-          transition: width 0.3s ease; // Transition effect
+          left: 0;
+          width: 0;
+          height: 2px;
+          background-color: #b08568;
+          transition: width 0.3s ease;
         }
         &:hover::before {
-          // Change width on hover
-          width: 100%; // Full width on hover
+          width: 100%;
         }
       }
     }
@@ -60,12 +57,9 @@
 .active {
   transform: translateY(0%);
   opacity: 1;
-  // transition: ;
 }
 
 .hidden {
   transform: translateY(-90%);
   opacity: 0;
-  // transition: ;
-  // display: none;
 }
