--- a/frontend/src/components/resetPassword/resetPassword.scss
+++ b/frontend/src/components/resetPassword/resetPassword.scss
@@ -17,6 +17,29 @@
       padding: 0.5rem 1rem;
     }
   }
+  .password-validation-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 500px;
+    width: 90%;
+    margin-top: 2rem;
+    padding-inline: 1rem;
+    line-height: 2rem;
+    word-spacing: 0.1rem;
+    font-size: 1.2rem;
+    .heading {
+      font-size: 1.5rem;
+    }
+    div {
+      display: flex;
+      gap: 0.5rem;
+      .dot-icon {
+        font-size: 2rem;
+      }
+    }
+  }
+
   .resetPassword-form {
     font-family: serif;
     font-style: italic;
@@ -65,17 +88,55 @@
     }
 
     button {
-      padding: 8px;
-      width: 100%;
-      margin-top: 1rem;
-      font-size: 1.2rem;
-      background-color: #b08568d3;
       border-radius: 10px;
-      border: #b08568 solid 2px;
       margin-top: 2rem;
-      &:hover {
-        background-color: #b08568;
-        border: #ffffff5e solid 2px;
+      background-color: #1c1919;
+      width: 100%;
+      height: 50px;
+      padding: 0;
+      border-radius: 10px;
+      border: 1px solid #c89a7aa0;
+      position: relative;
+      overflow: hidden;
+      transition: all 0.5s ease-in;
+      z-index: 0;
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 0;
+        height: 100%;
+        transform: skew(15deg);
+        transition: all 0.5s;
+        overflow: hidden;
+        z-index: -1;
+      }
+
+      &:hover::before,
+      &:hover::after {
+        width: 58%;
+      }
+
+      &:hover span {
+        color: #0f0206;
+        transition: 0.3s;
+      }
+      span {
+        color: #fdf9f6;
+        font-family: serif;
+        font-size: 1.3rem;
+        transition: all 0.3s ease-in;
+      }
+      &::before {
+        left: -1.8em;
+        background: #e0ac8999;
+      }
+
+      &::after {
+        right: -1.8em;
+        background: #e0ac8999;
       }
     }
   }
