--- a/frontend/src/components/Menu/menu.scss
+++ b/frontend/src/components/Menu/menu.scss
@@ -1,6 +1,7 @@
 ::-webkit-scrollbar:not(.menu) {
   display: none;
 }
+
 .menu {
   background-color: #1c1919;
   font-family: serif;
@@ -12,17 +13,14 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
   z-index: -1;
   display: flex;
   align-items: center;
   justify-content: center;
-
-  animation: slideDown 1.5s ease-out forwards;
-  // transition: transform 0.7s ease, opacity 0.7s ease;
-
-  transform-origin: top;
   overflow: hidden;
+  transform-origin: top;
+  transform: translateY(-100%);
+  transition: transform 1.5s ease, opacity 2s ease;
 
   ul {
     display: flex;
@@ -58,23 +56,12 @@
   }
 }
 
-.active {
+.Active {
   opacity: 1;
+  transform: translateY(0);
 }
 
-.hidden {
+.not-active {
   opacity: 0;
-
-}
-
-@keyframes slideDown {
-  from {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-
+  transform: translateY(-100%);
 }
