--- a/frontend/src/components/login/login.scss
+++ b/frontend/src/components/login/login.scss
@@ -88,11 +88,12 @@
       }
 
       .login-button {
-        background-color: #1c1919;
-        width: 150px;
-        height: 50px;
-        padding: 0;
+        padding: 8px;
+        width: 130px;
+        margin-top: 1rem;
+        font-size: 1.3rem;
         border-radius: 10px;
+        background-color: #1c1919;
         border: 1px solid #c89a7aa0;
         position: relative;
         overflow: hidden;
@@ -101,6 +102,7 @@
         @media screen and (max-width: 768px) {
           width: 100%;
         }
+
         &::before,
         &::after {
           content: "";
@@ -126,17 +128,23 @@
         span {
           color: #fdf9f6;
           font-family: serif;
-          font-size: 1.6rem;
+          font-size: 1.3rem;
           transition: all 0.3s ease-in;
         }
         &::before {
-          left: -0.3em;
+          left: -0.5em;
           background: #e0ac8999;
+          @media screen and (max-width: 768px) {
+            left: -1.6em;
+          }
         }
 
         &::after {
-          right: -0.3em;
+          right: -0.5em;
           background: #e0ac8999;
+          @media screen and (max-width: 768px) {
+            right: -1.6em;
+          }
         }
       }
     }
